--- a/eletroeletrônica.html
+++ b/eletroeletrônica.html
@@ -9,7 +9,6 @@
 <body>
     <div class="container">
         <h1>Eletroeletrônica</h1>
-
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,6 +19,8 @@
                 <li><a href="java.html">JavaScript</a></li>
                 <li><a href="eletroeletrônica.html">Eletroeletrônica</a></li>
                 <li><a href="banco_de_dados.html">Banco de Dados</a></li>
+                <li><a href="ordenacao.html">Ordenação</a></li>
+                <li><a href="descrescente.html">Ordenação</a></li>
             </ul>
         </nav>
 
