--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="eletroeletrônica.html">Eletroeletrônica</a></li>
                     <li><a href="banco_de_dados.html">Banco de Dados</a></li>
                     <li><a href="ordenacao.html">Ordenação</a></li>
+                    <li><a href="descrescente.html">Ordenação</a></li>
                 </ul>
             </nav>
         </div>
