--- a/java.html
+++ b/java.html
@@ -23,6 +23,8 @@
                     <li><a href="java.html">JavaScript</a></li>
                     <li><a href="eletroeletrônica.html">Eletroeletrônica</a></li>
                     <li><a href="banco_de_dados.html">Banco de Dados</a></li>
+                    <li><a href="ordenacao.html">Ordenação</a></li>
+                    <li><a href="descrescente.html">Ordenação</a></li>
                 </ul>
             </nav>
         </div>
